fixed window scrollbar

--- a/public/stylesheets/client/all_convos.less
+++ b/public/stylesheets/client/all_convos.less
@@ -12,7 +12,6 @@
 
 #all-convos {
 	height: auto;
-    padding-bottom: @standard-margin;
 
     .search {  	
     	float: left;
